--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.69"
+chrono = { version = "0.4.23", features = ["serde"] }
 cursive = "0.20.0"
+serde = { version = "1.0.152", features = ["derive"] }
+serde_json = "1.0.93"
