--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2021"
 anyhow = "1.0.69"
 chrono = { version = "0.4.23", features = ["serde"] }
 cursive = "0.20.0"
+log = "0.4.17"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
