--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.69"
 chrono = { version = "0.4.23", features = ["serde"] }
+crossbeam-channel = "0.5.6"
 cursive = "0.20.0"
 log = "0.4.17"
 serde = { version = "1.0.152", features = ["derive"] }
