--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ anyhow = "1.0.69"
 chrono = { version = "0.4.23", features = ["serde"] }
 crossbeam-channel = "0.5.6"
 cursive = "0.20.0"
+itertools = "0.10.5"
 log = "0.4.17"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
