--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,6 @@ crossbeam-channel = "0.5.6"
 cursive = "0.20.0"
 itertools = "0.10.5"
 log = "0.4.17"
+rangemap = "1.3.0"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
