--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.69"
 chrono = { version = "0.4.23", features = ["serde"] }
 crossbeam-channel = "0.5.6"
 cursive = "0.20.0"
+env_logger = "0.10.0"
 itertools = "0.10.5"
 log = "0.4.17"
-rangemap = "1.3.0"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
